--- a/style.css
+++ b/style.css
@@ -3,26 +3,102 @@ h1 {
     font-style: italic;
     font-family: fantasy;
 }
-h2 {
-    color:rgb(4, 100, 104);
+
+.description-habilities-daianne {
+    color: rgb(4, 100, 104);
     font-family: Arial, Helvetica, sans-serif;
-    font-size:large;
+    font-size: 15px;
     background-color: #decbe9;
+    padding: 15px;
+    border: 10;
+    font-weight: 100;
+    line-height: 1;
+    border: 5px;
+
 }
 
-body{
+.description-habilities-pandora{
+    color: rgb(4, 100, 104);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    background-color: #decbe9;
+    padding: 15px;
+    border: 10;
+    font-weight: 100;
+    line-height: 1;
+    border: 5px;
+
+}
+
+body {
     background-color: #fcf6bd;
 }
 
 #resumo-daianne {
-    background-color: #bee0fd;
-    font-family:cursive;
+
+    font-family: cursive;
     font-size: medium;
     font-style: italic;
+    padding: 15px;
 }
 
-.list-style {
-    background-color: #fcd5ce;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic;
+#image-pandora {
+    width: 200px;
+    position: absolute;
+    z-index: 1;
+}
+
+#image-daianne {
+    width: 200px;
+}
+
+#image-coracao {
+    width:100px;
+    position: absolute;
+    left: 150px;
+    z-index: 2;
+}
+
+#image-cachorro{
+    width: 60px;
+    float: left;
+    margin-bottom: 10px;
+
+}
+
+.list-style-daianne {
+
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.list-style-pandora {
+
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.paragrafo {
+    background-color: rgb(166, 218, 219);
+    width: 100%;
+    height: 1150px;
+    overflow-y: none;
+    overflow-x: none;
+}
+
+.habilidades {
+    background-color: rgb(240, 133, 133);
+    border: 5px solid yellow;
+}
+
+li:hover{
+    background-color: green;
+}
+
+li:active{
+    color: white;
 }
